--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "lodash": "^4.17.11",
     "path-to-regexp": "^3.0.0",
     "react": "^16.7.0",
+    "react-beautiful-dnd": "^10.0.3",
+    "react-dnd": "^7.0.2",
     "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3"
