--- a/package.json
+++ b/package.json
@@ -4,16 +4,20 @@
   "description": "Backend communication for cah",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "client": "cd client && yarn start",
+    "server": "nodemon index.js",
+    "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Yusuf Ameri",
   "license": "MIT",
   "dependencies": {
+    "concurrently": "^4.1.0",
     "connect-redis": "^3.4.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "express-socket.io-session": "^1.3.5",
+    "lodash": "^4.17.11",
     "nodemon": "^1.18.9",
     "socket.io": "^2.2.0",
     "uuid": "^3.3.2"
