--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "client": "cd client && yarn start",
     "server": "nodemon --exec babel-node index.js",
     "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "cd client && npm i && npm run build",
+    "start": "docker-compose up"
   },
   "author": "Yusuf Ameri",
   "license": "MIT",
