--- a/.circleci/config.yaml
+++ b/.circleci/config.yaml
@@ -1,8 +1,22 @@
-version: 2
+version: 2.0
 jobs:
-  build:
-    docker: # use the docker executor type; machine and macos executors are also supported
-      - image: circleci/node:4.8.2 # the primary container, where your job's commands are run
-    steps:
-      - checkout # check out the code in the project directory
-      - run: echo "hello world" # run the `echo` command
+ build:
+   # pre-built images: https://circleci.com/docs/2.0/circleci-images/
+   docker:
+     - image: circleci/node:10-browsers
+   steps:
+     - checkout
+     - run:
+         name: The First Step
+         command: |
+           echo 'Hello World!'
+           echo 'This is the delivery pipeline'
+     - run:
+         name: Code Has Arrived
+         command: |
+           ls -al
+           echo '^^^That should look familiar^^^'
+     - run:
+         name: Running in a Unique Container
+         command: |
+           node -v
