--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "express-socket.io-session": "^1.3.5",
     "lodash": "^4.17.11",
     "nodemon": "^1.18.9",
+    "prop-types": "^15.7.2",
+    "react-js-banner": "^0.2.4",
     "socket.io": "^2.2.0",
     "socket.io-redis": "^5.2.0"
   }
