--- a/client/package.json
+++ b/client/package.json
@@ -5,12 +5,14 @@
   "dependencies": {
     "lodash": "^4.17.11",
     "path-to-regexp": "^3.0.0",
+    "prop-types": "^15.7.2",
     "react": "^16.7.0",
     "react-beautiful-dnd": "^10.0.3",
     "react-dnd": "^7.0.2",
     "react-dom": "^16.7.0",
+    "react-js-banner": "^0.2.4",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.3",
+    "react-scripts": "^2.1.3",
     "socket.io-client": "^2.2.0"
   },
   "scripts": {
