--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Backend communication for cah",
   "main": "index.js",
   "scripts": {
-    "client": "cd client && yarn start",
+    "client": "cd client && npm start",
     "server": "babel-node index.js",
-    "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
+    "dev": "concurrently --kill-others-on-fail \"npm server\" \"npm client\"",
     "build": "cd client && npm i && npm run build",
     "start": "docker-compose up"
   },
@@ -23,8 +23,6 @@
     "express-socket.io-session": "^1.3.5",
     "lodash": "^4.17.11",
     "nodemon": "^1.18.9",
-    "prop-types": "^15.7.2",
-    "react-js-banner": "^0.2.4",
     "socket.io": "^2.2.0",
     "socket.io-redis": "^5.2.0"
   }
