--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,6 +32,7 @@ workflows:
             branches:
               only: cicd
       - publish-latest:
+          context: Master Production Context
           requires:
             - build
           filters:
