Change config.yml to build only on master

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,14 +62,14 @@ workflows:
       - build:
           filters:
             branches:
-              only: cicd
+              only: master
       - publish-latest:
           context: Master Production Context
           requires:
             - build
           filters:
             branches:
-              only: cicd
+              only: master
   build-tags:
     jobs:
       - build:
